# PokeGuesser

./: .gitignore  CMakeLists.txt  DailyPokemonHandler.py  Dockerfile  Guesser.py  LICENSE  Poke.py  README.md  deprecated.hpp  requirements.txt  run.sh  toto.json  vcpkg.json
.github/workflows/: push-to-docker.yaml
deprecated_python_version/: Poke.py
front/: package.json
front/public/: index.html
front/src/: App.css  App.js  PokeGuesser.js
front/translation/: babel_edit_project.babel
front/translation/english/: category.json  input.json  modal.json
front/translation/french/: category.json  input.json  modal.json
front/translation/german/: category.json
front/translation/italian/: category.json  input.json  modal.json
front/translation/spanish/: category.json
local_data_generator/: CMakeLists.txt  vcpkg.json
local_data_generator/src/: Language.hpp  Pokemon.hpp  PokemonGenerator.cpp  PokemonGenerator.hpp  Type.hpp  ioUtils.cpp  ioUtils.hpp  main.cpp
public/: game.js  style.css
public/fr/: index.html
src/: App.cpp  App.hpp  AppLogic.hpp  Messages.hpp  Network.hpp  Path.hpp  PlayerStatus.hpp  PokeAPI.cpp  PokeAPI.hpp  Pokemon.hpp  Random.cpp  Random.hpp  Route.hpp  StringviewUtils.hpp  main.cpp
